tests/ui/feature-gates/feature-gate-diagnostic-on-unknown-item.stderr
error[E0432]: unresolved import `std::vec::NotExisting`
  --> $DIR/feature-gate-diagnostic-on-unknown-item.rs:5:5
   |
LL | use std::vec::NotExisting;
   |     ^^^^^^^^^^^^^^^^^^^^^ no `NotExisting` in `vec`

error: unknown diagnostic attribute
  --> $DIR/feature-gate-diagnostic-on-unknown-item.rs:3:15
   |
LL | #[diagnostic::on_unknown_item(message = "Tada")]
   |               ^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/feature-gate-diagnostic-on-unknown-item.rs:1:9
   |
LL | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(unknown_diagnostic_attributes)]` implied by `#[deny(warnings)]`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
